--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -14,14 +14,14 @@ h2 {
 
 header {
     padding: 20px 35px;
-    background-color: slategray;
+    background-color: black;
 }
 
 header h1 {
     font-weight: bolder;
     font-size: 36px;
     display: flex;
-    color: black;
+    color: darkgoldenrod;
 }
 
 header nav ul {
