css button divs start hidden

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -130,6 +130,6 @@ section {
     font-size: 20px;
 }
 
-button div {
+#so-far, #cast-members, #supporters, #other-projects {
     display: none;
 }
