--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -123,6 +123,12 @@ section {
     font-size: 30px;
 }
 
+.section-title {
+   font-size: 50px;
+   border-bottom: 3px solid;
+   color: black; 
+}
+
 .box {
     padding: 5px 0;
 }
@@ -134,10 +140,6 @@ section {
     font-size: 40px
 }
 
-#about-us {
-    text-align: center;
-    font-size: 40px;
-}
 
 .cast {
     display: flex;
@@ -168,4 +170,8 @@ section {
 
 #most-recent-episode {
     width: 50%;
+}
+
+.flex-row {
+    display: flex;
 }
