--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -50,7 +50,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-    margin:  0px 30px 10px 30px;
+    padding: 10px 15px;
     font-weight: bold;
     font-size: 1.55vw;
 }
@@ -78,9 +78,8 @@ section {
     background-image: url("../images/Banner.png");
     background-size: cover;
     background-position: center;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    position: relative;
+    align-items: flex-start;
 }
 
 .hero-textblock {
@@ -89,7 +88,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-textblock h2 {
@@ -174,4 +173,69 @@ section {
 
 .flex-row {
     display: flex;
+}
+
+/* Media Queries for screen size */
+@media screen and (max-width:980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+      }
+    
+      header h1 {
+        width: 100%;
+        text-align: center;
+      }
+    
+      header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+      }
+    
+      header nav ul li a {
+        font-size: 20px;
+      }
+    
+      footer h2, footer div {
+        text-align: center;
+        width: 100%;
+      }
+
+    .hero-textblock, .hero-support {
+        width: 100%;
+    }
+
+    .hero-textblock {
+        text-align: center;
+    }
+
+    .section-title {
+        width: 80%;
+    }
+
+    .cast {
+        flex: 0 70%;
+    }
+}
+
+@media screen and (max-width:768px) {
+    section {
+        padding: 30px 15px;
+    }
+}
+
+@media screen and (max-width:575px) {
+    .hero-support {
+
+    }
+
+    .section-title {
+        width: 95%;
+    }
+
+    #about-us p {
+        width: 100%;
+    }
+
 }
